Do not discard alpha component of palettized images

BUG: 274394
FIXED-IN: 4.7.0